Attempt full code.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <main>
     <div id="mainContainer">
       <p>You can write what you like here. It is a matter of taste. I recommend you don't think about it too hard. It isn't a huge deal. I think it is best to let it fly. There isn't any reason to sweat it. You just want to have "it" in your text.</p>
+      <p>If you don't write it, they can't see it. If it doesn't make you write it then it isn't the thing you need to write.</p>
     </div>
     <script type="module" src="./resources/js/app/main.js"></script>
   </main>
